2018-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCasm.c,
	  src/SDCCicode.c,
	  src/SDCCralloc.hpp,
	  src/stm8/gen.c,
	  src/stm8/ralloc.c,
	  src/stm8/ralloc2.cc,
	  src/stm8/peep.c:
	  Improve handling of global pointers.

2018-03-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Implement basic optimization of calls to standard library functions, RFE #564.
	* support/regression/tests/bug-716242.c,
	  support/regression/tests/genptrs.c:
	  Fix tests that assign void * to function pointers.
	* src/SDCCglue.c:
	  Use jpf to reach main() for stm8 large memory model.
	* src/stm8/gen.c:
	  Give up on assembler for stm8 large memory model to make regression tests pass.

2018-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor optimization for 8-bit pointer reads.

2018-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/constantRange.c:
	  Make tests expect a few more warnings implemented in SDCC.
	* src/stm8/gen.c:
	  Fix | of a with itself.
	* support/valdiag/tests/bug-971834.c:
	  Do not expect unreasonable warning.
	* src/SDCCast.h,
	  src/SDCCast.c,
	  src/SDCCicode.c,
	  support/valdiag/tests/pointers.c:
	  Fix bug #2730.

2018-03-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCast.c,
	  support/valdiag/valdiag.py,
	  support/valdiag/tests/pointers.c:
	  Diagnostics for conversions between pointers to objects and pointers to functions.
	* src/stm8/gen.c,
	  src/stm8/peeph.def:
	  Some minor improvements.

2018-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve calls via global function pointers.
	* src/pic16/gen.c,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.c:
	  Fix NEARPTRSIZE use.
	* src/hc08/main.c:
	  Fix leftover max type size.

2018-03-25 Philipp Klaus Krause <pkk AT spth.de>
